<resources>
    <string name="app_name">Diabeat</string>
    <string name="record">紀錄</string>
    <string name="figure">資料圖表</string>
    <string name="acc">帳號</string>
    <string name="glucose_level">血糖值</string>
    <string name="carbohydrate_intake">碳水化合物攝取量(g)</string>
    <string name="exercise_duration">運動時長(min)</string>
    <string name="insulin_injection_volume">胰島素注射量</string>
    <string name="submit">送出</string>
    <string name="pw">密碼</string>
    <string name="log_in">登入</string>
    <string name="register">註冊</string>
    <string name="email">Email</string>
    <string name="google_sign_in">Google 登入</string>
    <string name="username">Username</string>
    <string name="profile">個人資料</string>
    <string name="glucose_history">血糖軌跡紀錄</string>
    <string name="cancel">取消</string>
    <string name="ok">OK</string>
    <string name="log_out">登出</string>
    <string name="host">Host</string>
    <string name="bio_log_in">生物辨識登入</string>
    <string name="err">錯誤</string>
    <string name="log_in_fail">登入失敗</string>
    <string name="email_registered">此 Email 已被註冊</string>
    <string name="username_registered">此 Username 已被註冊</string>
    <string name="email_username_registered">此 Email 和 Username 皆已被註冊</string>
    <string name="socket_timeout_exception">連線逾時</string>
    <string name="bio">生物辨識</string>
    <string name="reme">記得我</string>
    <string name="_192">192</string>
    <string name="_168">168</string>
    <string name="start_up">啟動時顯示</string>
    <string name="host_volume_up">Tips : 按音量上顯示此設定</string>
    <string name="web_client_id">445713935204-nbe44ho6lq9p5sj151qp6pm9pdmdq09p.apps.googleusercontent.com</string>
</resources>