<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frag.AccFrag">

    <TextView
        android:id="@+id/acc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acc"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toTopOf="@id/et_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/et_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:padding="@dimen/group_padding_margin"
        app:layout_constraintBottom_toTopOf="@id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acc_tv">

        <EditText
            android:id="@+id/email_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/group_padding_margin"
            android:ems="@integer/min_ems"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@id/username_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/group_padding_margin"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minEms="@integer/min_ems"
            app:layout_constraintBottom_toTopOf="@id/pw_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_et" />

        <EditText
            android:id="@+id/pw_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/group_padding_margin"
            android:hint="@string/pw"
            android:inputType="textPassword"
            android:minEms="@integer/min_ems"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_et" />

        <ImageView
            android:id="@+id/show_hide_pw_iv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:importantForAccessibility="no"
            android:src="@drawable/invisible"
            app:layout_constraintBottom_toBottomOf="@id/pw_et"
            app:layout_constraintEnd_toEndOf="@id/pw_et"
            app:layout_constraintTop_toTopOf="@id/pw_et" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_group" />

</androidx.constraintlayout.widget.ConstraintLayout>